--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,7 @@ apply plugin: "java"
 
 version '1.0'
 
-compileJava.options.encoding = 'UTF-8'
-compileTestJava.options.encoding = 'UTF-8'
-
-sourceSets.main {
-    java.srcDirs = ['src']
-    resources.srcDirs = ['src/resources']
-}
+sourceSets.main.java.srcDirs = ["src"]
 
 repositories{
     mavenCentral()
@@ -16,14 +10,29 @@ repositories{
 }
 
 dependencies{
-    def mindustryVersion = "v135"
-    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    def version = "v135"
+    compileOnly "com.github.Anuken.Arc:arc-core:$version"
+    compileOnly "com.github.Anuken.Mindustry:core:$version"
+}
+
+compileJava{
+    sourceCompatibility = JavaVersion.VERSION_16
+    targetCompatibility = JavaVersion.VERSION_16
+    options.encoding = "UTF-8"
+}
+
+compileTestJava{
+    options.encoding = "UTF-8"
 }
 
 jar{
     archiveFileName = "${project.archivesBaseName}.jar"
+
     from{
         configurations.runtimeClasspath.collect{it.isDirectory() ? it : zipTree(it)}
+    }
+
+    from(rootDir){
+        include "plugin.json"
     }
 }
